# Hazel-Learning

./: CMakeLists.txt  Hazel引擎梳理.docx  LICENSE  README.md
Hazel/: CMakeLists.txt
Hazel-Editor/: CMakeLists.txt
Hazel-Editor/SandboxProject/: SandboxProject.csproj  SandboxProject.sln
Hazel-Editor/SandboxProject/Assets/Scripts/Source/: Player.cs
Hazel-Editor/SandboxProject/Properties/: AssemblyInfo.cs
Hazel-Editor/assets/scenes/: 2DBatch.hazel  3DBatch.hazel  3DExample.hazel  Example.hazel  Physics2D.hazel
Hazel-Editor/assets/shaders/: Texture.glsl
Hazel-Editor/src/: EditorLayer.cpp  EditorLayer.h  HazelEditorApp.cpp
Hazel-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Hazel-ScriptCore/: Hazel-ScriptCore.csproj  Hazel-ScriptCore.sln  Main.cs
Hazel-ScriptCore/Properties/: AssemblyInfo.cs
Hazel/src/: Hazel.h  hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.h  Log.cpp  Window.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Timestep.h  UUID..cpp  UUID.h  Window.cpp  Window.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Hazel/src/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Hazel/Math/: Math.cpp  Math.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IRenderStats.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  RenderStats.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Hazel/src/Hazel/Renderer/Geometry/: Cube.h  Geometry.h  Quad.h  Sphere.h
Hazel/src/Hazel/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Hazel/src/Hazel/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Hazel/src/Hazel/Utils/: PlatformUtils.h
Hazel/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
